--- a/printserver/templates/base.html
+++ b/printserver/templates/base.html
@@ -7,9 +7,22 @@
 	{% endblock %}
 </head>
 <body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
+  <!-- Add header -->
+  <div class="header">
+    <h1>
+    
+      <!-- If authenticated then link of logout, otherwise link of login -->
+      {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+      {% else %}
+        <a href="{% url 'login' %}">Login</a>  
+      {% endif %}
+      
+    </h1>
+  </div>
+
+  {% block content %}
+  {% endblock %}
+  
 </body>
 </html>
