Added file pdf generation

--- a/printserver/prints/templates/list.html
+++ b/printserver/prints/templates/list.html
@@ -34,6 +34,7 @@
 				<th>Printing Time</th>
 				<th>Total Page</th>
 				<th>Status</th>
+				<th>View</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -46,6 +47,10 @@
 				<td>{{ print.printing_time }}</td>
 				<td>{{ print.total_page }}</td>
 				<td>{{ print.get_status_display }}</td>
+				<td> 	
+					<!-- Button with link -->
+					<a href="{% url 'pdf' print.print_id %}" class="btn btn-primary">View</a>
+				</td>
 			</tr>
 			{% empty %}
 			<tr>
