--- a/printserver/templates/base.html
+++ b/printserver/templates/base.html
@@ -11,11 +11,10 @@
   <div class="header">
     <h1>
     
-      <!-- If authenticated then link of logout, otherwise link of login -->
+      <!-- If authenticated then hello with name and link of logout, otherwise nothing -->
       {% if user.is_authenticated %}
+        Hello {{ user.get_full_name }}
         <a href="{% url 'logout' %}">Logout</a>
-      {% else %}
-        <a href="{% url 'login' %}">Login</a>  
       {% endif %}
       
     </h1>
