--- a/printserver/prints/templates/submit.html
+++ b/printserver/prints/templates/submit.html
@@ -23,10 +23,7 @@
 		<div class="col-md-12">
 			<form action="{% url 'submit' %}" method="POST">
 				{% csrf_token %}
-				<div class="form-group">
-					<label for="source_code">Source</label>
-					<textarea class="form-control" id="source_code" name="source_code" rows="10"></textarea>
-				</div>
+				{{ form.as_p }}
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
 		</div>
