--- a/printserver/prints/templates/submit.html
+++ b/printserver/prints/templates/submit.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+
 <!-- https://medium.com/weekly-webtips/enable-line-numbering-to-any-html-textarea-35e15ea320e2 -->
 <!-- 
 	Form Structure
@@ -24,6 +25,19 @@
 			<form action="{% url 'submit' %}" method="POST">
 				{% csrf_token %}
 				{{ form.as_p }}
+				<input type="file" id="myFile" name="filename"  onchange=	"populateSourceCode()">
+				<script type="text/javascript">	
+					function populateSourceCode() {
+						var file = document.getElementById('myFile').files[0];
+						var text = document.getElementById('id_source_code');
+						var reader = new FileReader();
+						reader.onload = function(e) {
+							text.value = e.target.result;
+						}
+						reader.readAsText(file);
+						document.getElementById("myFile").value = "";
+					}
+				</script>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
 		</div>
