--- a/printserver/templates/base.html
+++ b/printserver/templates/base.html
@@ -5,6 +5,10 @@
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
 	{% block head %}
 	{% endblock %}
+  
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </head>
 <body>
   <!-- Add header -->
