--- a/printserver/templates/base.html
+++ b/printserver/templates/base.html
@@ -5,6 +5,8 @@
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
 	{% block head %}
 	{% endblock %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
 </head>
 <body>
   <!-- Add header -->
@@ -13,8 +15,15 @@
     
       <!-- If authenticated then hello with name and link of logout, otherwise nothing -->
       {% if user.is_authenticated %}
-        Hello {{ user.get_full_name }}
-        <a href="{% url 'logout' %}">Logout</a>
+          <nav class="navbar bg-light">
+  <div class="container-fluid">
+
+      <div class="navbar-brand">Hello {{ user.get_full_name }}</div>
+        <a class="navbar-brand btn btn-danger" href="{% url 'logout' %}">Logout</a>
+  </div>
+</nav>
+
+
       {% endif %}
       
     </h1>
@@ -22,6 +31,6 @@
 
   {% block content %}
   {% endblock %}
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
