--- a/printserver/users/templates/status.html
+++ b/printserver/users/templates/status.html
@@ -17,7 +17,7 @@
 
 		th {
 				background-color: #4CAF50;
-				color: white;
+				color: black;
 		}
 </style>
 {% endblock %}
@@ -27,7 +27,7 @@
 	<!-- Create New Request Button -->
 	<a href="{% url 'submit' %}" class="btn btn-primary">New Request</a>
 
-	<table class="table table-striped">
+	<table class="table table-stripped">
 		<thead>
 			<tr>
 				<th>Print ID</th>
