--- a/printserver/templates/base.html
+++ b/printserver/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <title>{% block title %} Print Server {% endblock %}</title>
 	{% block head %}
 	{% endblock %}
 
