--- a/printserver/templates/includes/css.html
+++ b/printserver/templates/includes/css.html
@@ -1,7 +1,5 @@
 {% load static %}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-{#<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">#}
-<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
-<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/all.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'css/magic.css' %}">
