added alert onclick of forgot password link

--- a/printserver/users/templates/login.html
+++ b/printserver/users/templates/login.html
@@ -44,7 +44,7 @@
                         <button type="submit" class="btn btn-primary">Login</button>
                     </div>
                     <div class="pull-left">
-                        <a href="#" title="Ask a volunteer!">Forgot password?</a>
+                        <a href="#" title="Ask a volunteer!" onclick='alert("Ask a volunteer!")'>Forgot password?</a>
                     </div>
                 </div>
             </form>
