--- a/printserver/templates/layout.html
+++ b/printserver/templates/layout.html
@@ -14,7 +14,7 @@
 
     <!-- Page Content -->
     <div id="page-wrapper">
-        {% block contents %}{% endblock %}
+        {% block content %}{% endblock %}
     </div>
     <!-- /#page-content-wrapper -->
 
