--- a/printserver/users/templates/login.html
+++ b/printserver/users/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 
-{% block contents %}
+{% block content %}
     <div class="container">
         <div class="text-center p20">
             <h1>
