--- a/printserver/templates/includes/js.html
+++ b/printserver/templates/includes/js.html
@@ -1,4 +1,5 @@
 {% load static %}
 
+<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.js' %}"></script>
 <script src="{% static 'js/all.js' %}"></script>
